
     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

04 December, 02   Y.Morita (persistency-V04-01-02)
- G4PersistencyManager.cc: protect for default persistency manager
- G4PersistencyCenter.cc: bug fixes, disable HepMC/MCTruth printout

04 December, 02   G.Cosmo (persistency-V04-01-01)
- Corrections to comply to G4 coding rules:
  o use of g4std/ headers for STL classes;
  o use G4std:: instead of std::
  o use of G4 types (limited to G4bool, G4cout, G4endl, G4cerr)
- Fixes for porting on Windows platform:
  o HepMC is not currently supported by CLHEP on Windows, so must be
    excluded from compilation  on Windows systems.

29 November, 02   Y.Morita (persistency-V04-01-00)
- tools for developers

23 November, 02   Y.Morita
- new abstract interface for persistency for release 5.0.
- for actual implementation of HepODBMS and ROOT I/O, see
  $G4INSTALL/examples/extended/persistency/README.

7 December, 01    Y.Morita (persistency-V03-02-02)
- added G4Pglobals.hh to G4PVHits and G4PVDigits for g++ 2.95.2 headers

6 July, 01    Y.Morita (persistency-V03-02-01)
- added more SRM descriptions

4 July, 01    Y.Morita (persistency-V03-02-00)
- STL migration: 
   modified: G4Pglobals.hh, G4PGeometryObjectMap.ddl, G4PGeometryObjectMap.cc
   removed: G4VPhysVolRefArray.hh, G4LogVolRefArray.hh G4VSolidRefArray.hh

21 June, 01    Y.Morita (persistency-V03-01-00)
- new tag for release 3.2

28 April, 01   Y.Morita
- Change NULL to 0

25 April, 01   G.Cosmo
- Removed redundant declarations of G4ThreeVectorList in CSG schemas:
  G4PPara.ddl, G4PSphere.ddl and G4PTrap.ddl.
  Required to cowork with recent migration to STL vector of geometry code.

15 March, 01   Y.Morita (persistency-V03-00-02)
- Updated GNUmakefile for new config.

14 March, 01   Y.Morita (persistency-V03-00-01)