@@ -1,4 +1,4 @@
-// $Id: G4VPDigitIO.cc,v 1.1 2002-11-24 13:45:25 morita Exp $
+// $Id: G4VPDigitIO.cc,v 1.2 2002-12-04 13:57:30 morita Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // File: G4VPDigitIO.cc
@@ -14,7 +14,7 @@ G4VPDigitIO* G4VPDigitIO::f_G4VPDigitIO = 0;
 G4VPDigitIO::G4VPDigitIO()
  : m_verbose(0)
 {
-  f_catalog = G4DCIOcatalog::GetG4DCIOcatalog();
+  f_catalog = G4DCIOcatalog::GetDCIOcatalog();
 }
 
 // Implementation of SetVerboseLevel
